--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@ a:visited{color:#000;}
 
 }
 
-.calendarWrap .calender_right .calendarBox ul{
+.calendarWrap .calender_right .calendarBox .calendar_Date{
 
     padding: 20px;
     margin:0 auto;
@@ -200,30 +200,60 @@ a:visited{color:#000;}
 
 }
 
-.calendarWrap .calender_right .calendarBox ul li{
+.calendarWrap .calender_right .calendarBox .calendar_Date li{
 
-    padding: 10px;
-    float:left;
     text-align: center;
     color:#333;
+    padding: 10px;
+    font-size: 15px;
 
+}
+
+.calendarWrap .calender_right .calendarBox .calendar_Date li:nth-child(1){
+
+    color:#f00;
+}
+
+.calendarWrap .calender_right .calendarBox .calendar_Date li:last-child{
+
+    color:#0000ff;
 }
 
 .calendarWrap .calender_right .calendar_Content{
 
     padding: 10px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #eaeaea;
 
 }
 
+.calendarWrap .calender_right .calendar_Content li{
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+
+}
+
 .calendarWrap .calender_right .calendar_Content li p{
 
-    padding: 3px;
+    width: 45px;
+    height: 45px;
     font-size: 13px;
     font-weight: 400;
     color:#333;
+    text-align: center;
+    line-height:45px;
 
+}
+
+.calendarWrap .calender_right .calendar_Content li p:hover{
+
+    background-color: #333;
+    color:#eaeaea;
+    border-radius: 30px;
 }
